made text more easily

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ body {
     height: 80%;
     background-repeat: repeat;
     font-size: 72px;
-    color:black;
+    color:yellow;
     font-weight:bold;
     
 }
